# mi-notes-organizer

./: .gitignore  README.md  app.py  bookmarklet-export.js  cookie-refresh.js  mi-notes-export.js  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: sync-notes.yml
data/: sample.json
extension/: content.js  manifest.json
src/: __init__.py  cli.py  config.py  models.py
src/generators/: __init__.py
src/organizers/: __init__.py
src/parsers/: __init__.py
src/web/: __init__.py  server.py
static/: index.html  mobile.html
tests/: test_basic.py
